2005-03-03 Eric Sandall <eric@sandall.us>
	* info/patches/bootsplash_patches/bootsplash-3.1.4-2.6.11.diff: Added
	* info/patches/mppe_mppc_patches/linux-2.6.11-mppe-mppc-1.3.patch: Added
	* info/patches/mppe_mppc_patches/linux-2.4.29-mppe-mppc-1.3.patch: Added

2005-03-02 David Brown <dmlb2000@excite.com>
	* info/patches/reiser4_patches/reiser4-2.6.10-2 added

2005-03-02 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to patch-2.6.11-cko1
	* info/patches/cko_patches/patch-2.6.11-cko1 added

2005-03-02 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to patch-2.6.11-ck1
	* info/patches/ck_patches/patch-2.6.11-ck1 added
	* info/patches/ck_patches/2.6.11-rc2-ck1.diff deleted

2005-03-02 David Brown <dmlb2000@excite.com>
	* latest.defaults updated latest to 2.6.11-rc5-mm1
	* info/patches/mm_patches/2.6.11-rc5-mm1 added
	* info/patches/mm_patches/2.6.10-mm2 deleted

2005-03-03 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated PRE_2_6 patch to 2.6.11
	* info/patches/PRE_2_6/patch-2.6.11 added

2005-03-03 Ladislav Hagara <hgr@vabo.cz>
	* latest.defaults: 2.6.11
	* info/kernels/2.6.11: added

2005-02-27 David Brown <dmlb2000@excite.com>
	* DETAILS: updated to add patches short to SHORT
	* PREPARE: updated to add SHORT
	* PRE_BUILD: added unpack just for md5sum check... :-\

2005-02-25 David Brown <dmlb2000@excite.com>
        * latest.defaults: updated ck_patches to 2.6.10-ck6
        * info/patches/mm_patches/2.6.10-ck6 added

2005-02-24 David Brown <dmlb2000@excite.com>
        * latest.defaults: updated PRE_2_6 to 2.6.11-rc5
        * info/patches/mm_patches/2.6.11-rc5 added
        * info/patches/mm_patches/2.6.10-rc1 deleted

2005-02-23 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated mm to 2.6.11-rc4-mm1
	* info/patches/mm_patches/2.6.11-rc4-mm1 added
	* info/patches/mm_patches/2.6.10-mm5 deleted

2005-02-14 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated pre 2.6 patches and as sources