@@ -9,7 +9,7 @@ LATEST_mm_patches=2.6.11-rc5-mm1
 LATEST_ac_patches=patch-2.6.10-ac12
 LATEST_grsecurity_2_4=grsecurity-2.1.0-2.4.28-200501051112.patch
 LATEST_grsec_secfix_2_4=linux-2.4.28-secfix-200501071141.patch
-LATEST_grsecurity_2_6=grsecurity-2.1.0-2.6.10-200501081640.patch
+LATEST_grsecurity_2_6=grsecurity-2.1.1-2.6.10-as2-200501242254.patch
 LATEST_grsec_secfix_2_6=linux-2.6.10-secfix-200501071130.patch
 LATEST_nitro_patches=patch-2.6.11-rc1-nitro0
 LATEST_ck_patches=patch-2.6.11-ck1
