@@ -1,3 +1,7 @@
+2005-03-03 David Brown <dmlb2000@excite.com>
+	* latest.defaults updated latest to grsecurity-2.1.1-2.6.10-as2-200501242254.patch
+	* info/patches/grsecurity_2_6/grsecurity-2.1.1-2.6.10-as2-200501242254.patch added
+
 2005-03-03 Eric Sandall <eric@sandall.us>
 	* info/patches/bootsplash_patches/bootsplash-3.1.4-2.6.11.diff: Added
 	* info/patches/mppe_mppc_patches/linux-2.6.11-mppe-mppc-1.3.patch: Added
